--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-google-tagmanager": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
