--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.14.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
@@ -35,6 +36,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "sweetalert2": "^11.4.14",
     "swiper": "^7.4.1"
   },
   "devDependencies": {
